@@ -1,3 +1,8 @@
+2008-06-15  Eric Hodel  <drbrain@segment7.net>
+
+	* lib/rubygems/server.rb:  Store off if we are returning Marshal
+	format before running =~ again.  Fixes bug reported by Chad Wooley.
+
 2008-06-09  Eric Hodel  <drbrain@segment7.net>
 
 	* lib/rubygems/dependency_installer.rb:  Only install all dependencies
